--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 
 <body class="base-color">
-    <img id="banner-img" src="../assets/banner.png" alt="Banner">
+    <img id="banner-img" src="./assets/banner.png" alt="Banner">
     <div class="container">
         <section id="blog-section" class="section">
             <h1 class="section-title">Blog</h1>
             <div class="blog-list">
-                <a class="blog-card" href="./blogs/blog-post-1.html">
+                <a class="blog-card" href="./src/blogs/blog-post-1.html">
                     <div>
                         <span class="blog-date">04-08-2025</span>
                         <h2>Learning assembly programming</h2>
@@ -24,14 +24,14 @@
                         </p>
                     </div>
                 </a>
-                <a class="blog-card" href="./blogs/blog-post-2.html">
+                <a class="blog-card" href="./src/blogs/blog-post-2.html">
                     <div>
                         <span class="blog-date">05-08-2025</span>
                         <h2>How I opened a window in x86 assembly...</h2>
                         <p>This time around, I learned how to open a window using the Windows API.</p>
                     </div>
                 </a>
-                <a class="blog-card" href="./blogs/blog-post-3.html">
+                <a class="blog-card" href="./src/blogs/blog-post-3.html">
                     <div>
                         <span class="blog-date">08-08-2025</span>
                         <h2>Writing a disassembler in assembly...</h2>
